add component styles and dark theme system
- Created reusable component classes (buttons, cards, forms)
- Implemented dark theme with CSS custom properties
- Added responsive component styles
- Prepared theme toggle functionality
- Enhanced visual design system"

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title></title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
+  <!-- Temas -->
+  <link rel="stylesheet" href="css/themes/light.css" id="theme-stylesheet">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
