--- a/index.html
+++ b/index.html
@@ -1,35 +1,253 @@
-<!doctype html>
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html lang="es" class="no-js">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portafolio Profesional - Emerson Rodas</title>
+  <meta name="description" content="Portafolio profesional de Emerson Rodas. Desarrollador especializado en HTML, CSS y JavaScript.">
+
+  <!-- Meta tags SEO -->
+  <meta name="keywords" content="portafolio, desarrollador, HTML, CSS, JavaScript, frontend">
+  <meta name="author" content="Emerson Rodas">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Portafolio Profesional - Emerson Rodas">
+  <meta property="og:description" content="Portafolio profesional desarrollado con las últimas tecnologías web.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tudominio.com">
+  <meta property="og:image" content="img/og-image.jpg">
+  <meta property="og:image:alt" content="Portafolio Emerson Rodas">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+  <link rel="apple-touch-icon" href="img/icon.png">
+
+  <!-- Manifest -->
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#2563eb">
+
+  <!-- CSS Architecture -->
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/components.css">
   <!-- Temas -->
   <link rel="stylesheet" href="css/themes/light.css" id="theme-stylesheet">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+  <!-- Animaciones y estilos personalizados -->
+  <link rel="stylesheet" href="css/custom/animations.css">
+  <link rel="stylesheet" href="css/custom/sections.css">
 </head>
 
 <body>
+<!-- Navegación Principal -->
+<header class="header" role="banner">
+  <nav class="nav container" role="navigation" aria-label="Navegación principal">
+    <div class="nav__brand">
+      <a href="#inicio" class="nav__logo">[Tu Logo]</a>
+    </div>
+    <ul class="nav__menu">
+      <li class="nav__item"><a href="#inicio" class="nav__link">Inicio</a></li>
+      <li class="nav__item"><a href="#sobre-mi" class="nav__link">Sobre Mí</a></li>
+      <li class="nav__item"><a href="#habilidades" class="nav__link">Habilidades</a></li>
+      <li class="nav__item"><a href="#proyectos" class="nav__link">Proyectos</a></li>
+      <li class="nav__item"><a href="#contacto" class="nav__link">Contacto</a></li>
+    </ul>
+    <button class="theme-toggle" aria-label="Cambiar modo claro/oscuro">
+      <span class="theme-toggle__icon">🌙</span>
+    </button>
+  </nav>
+</header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+<!-- Contenido Principal -->
+<main class="main" role="main">
+  <!-- Sección Hero -->
+  <section id="inicio" class="hero container" aria-labelledby="hero-title">
+    <div class="hero__content">
+      <h1 id="hero-title" class="hero__title">Hola, soy <span class="hero__name text-gradient">Emerson Rodas</span></h1>
+      <p class="hero__description">Desarrollador Frontend especializado en crear experiencias web excepcionales</p>
+      <div class="hero__buttons">
+        <a href="#proyectos" class="btn btn--primary hover-lift">Ver Proyectos</a>
+        <a href="#contacto" class="btn btn--secondary hover-lift">Contactar</a>
+      </div>
+    </div>
+    <div class="hero__image">
+      <img src="img/profile.webp" alt="Emerson Rodas - Desarrollador" loading="lazy" class="hover-scale">
+    </div>
+  </section>
 
+  <!-- Sección Sobre Mí -->
+  <section id="sobre-mi" class="about section--alt" aria-labelledby="about-title">
+    <div class="container">
+      <h2 id="about-title" class="section__title">Sobre Mí</h2>
+      <div class="about__content">
+        <div class="about__text">
+          <p>Texto descriptivo sobre tu experiencia, pasión por el desarrollo y objetivos profesionales. Cuenta tu historia y lo que te motiva en el desarrollo web.</p>
+          <p>Puedes hablar sobre tu formación, proyectos anteriores y lo que te apasiona de la tecnología.</p>
+        </div>
+        <div class="about__image">
+          <img src="img/about-placeholder.jpg" alt="Sobre Emerson Rodas" loading="lazy" class="hover-scale">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Sección Habilidades -->
+  <section id="habilidades" class="skills" aria-labelledby="skills-title">
+    <div class="container">
+      <h2 id="skills-title" class="section__title">Habilidades Técnicas</h2>
+      <div class="skills__grid">
+        <div class="skill-card hover-lift reveal-item">
+          <div class="skill-card__icon">💻</div>
+          <h3 class="skill-card__name">HTML5</h3>
+          <p class="skill-card__level">Avanzado</p>
+        </div>
+        <div class="skill-card hover-lift reveal-item">
+          <div class="skill-card__icon">🎨</div>
+          <h3 class="skill-card__name">CSS3</h3>
+          <p class="skill-card__level">Avanzado</p>
+        </div>
+        <div class="skill-card hover-lift reveal-item">
+          <div class="skill-card__icon">⚡</div>
+          <h3 class="skill-card__name">JavaScript</h3>
+          <p class="skill-card__level">Intermedio-Avanzado</p>
+        </div>
+        <div class="skill-card hover-lift reveal-item">
+          <div class="skill-card__icon">📱</div>
+          <h3 class="skill-card__name">Responsive Design</h3>
+          <p class="skill-card__level">Avanzado</p>
+        </div>
+        <div class="skill-card hover-lift reveal-item">
+          <div class="skill-card__icon">🔧</div>
+          <h3 class="skill-card__name">Git</h3>
+          <p class="skill-card__level">Intermedio</p>
+        </div>
+        <div class="skill-card hover-lift reveal-item">
+          <div class="skill-card__icon">🚀</div>
+          <h3 class="skill-card__name">Performance</h3>
+          <p class="skill-card__level">Intermedio</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Sección Proyectos -->
+  <section id="proyectos" class="projects section--alt" aria-labelledby="projects-title">
+    <div class="container">
+      <h2 id="projects-title" class="section__title">Proyectos Destacados</h2>
+      <div class="projects__grid">
+        <article class="project-card hover-lift reveal-item">
+          <div class="project-card__image-container">
+            <img src="img/projects/project1.jpg" alt="Proyecto 1" class="project-card__image" loading="lazy">
+            <div class="project-card__overlay">
+              <div class="project-card__links--overlay">
+                <a href="#" class="btn btn--primary">Demo</a>
+                <a href="#" class="btn btn--secondary">Código</a>
+              </div>
+            </div>
+          </div>
+          <div class="project-card__content">
+            <h3 class="project-card__title">Landing Page Moderna</h3>
+            <p class="project-card__description">Una landing page responsiva construida con HTML, CSS y JavaScript vanilla.</p>
+            <div class="project-card__tags">
+              <span class="project-card__tag">HTML</span>
+              <span class="project-card__tag">CSS</span>
+              <span class="project-card__tag">JS</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="project-card hover-lift reveal-item">
+          <div class="project-card__image-container">
+            <img src="img/projects/project2.jpg" alt="Proyecto 2" class="project-card__image" loading="lazy">
+            <div class="project-card__overlay">
+              <div class="project-card__links--overlay">
+                <a href="#" class="btn btn--primary">Demo</a>
+                <a href="#" class="btn btn--secondary">Código</a>
+              </div>
+            </div>
+          </div>
+          <div class="project-card__content">
+            <h3 class="project-card__title">E-commerce Básico</h3>
+            <p class="project-card__description">Tienda online con carrito de compras funcional usando JavaScript.</p>
+            <div class="project-card__tags">
+              <span class="project-card__tag">HTML</span>
+              <span class="project-card__tag">CSS</span>
+              <span class="project-card__tag">JavaScript</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="project-card hover-lift reveal-item">
+          <div class="project-card__image-container">
+            <img src="img/projects/project3.jpg" alt="Proyecto 3" class="project-card__image" loading="lazy">
+            <div class="project-card__overlay">
+              <div class="project-card__links--overlay">
+                <a href="#" class="btn btn--primary">Demo</a>
+                <a href="#" class="btn btn--secondary">Código</a>
+              </div>
+            </div>
+          </div>
+          <div class="project-card__content">
+            <h3 class="project-card__title">App de Tareas</h3>
+            <p class="project-card__description">Aplicación de lista de tareas con persistencia local.</p>
+            <div class="project-card__tags">
+              <span class="project-card__tag">HTML</span>
+              <span class="project-card__tag">CSS</span>
+              <span class="project-card__tag">LocalStorage</span>
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- Sección Contacto -->
+  <section id="contacto" class="contact" aria-labelledby="contact-title">
+    <div class="container">
+      <h2 id="contact-title" class="section__title">Contacto</h2>
+      <form class="contact__form" id="contact-form">
+        <div class="form__group">
+          <label for="name" class="form__label">Nombre</label>
+          <input type="text" id="name" name="name" class="form__input" required>
+        </div>
+        <div class="form__group">
+          <label for="email" class="form__label">Email</label>
+          <input type="email" id="email" name="email" class="form__input" required>
+        </div>
+        <div class="form__group">
+          <label for="message" class="form__label">Mensaje</label>
+          <textarea id="message" name="message" class="form__textarea" rows="5" required></textarea>
+        </div>
+        <button type="submit" class="btn btn--primary hover-lift">Enviar Mensaje</button>
+      </form>
+    </div>
+  </section>
+</main>
+
+<!-- Pie de Página -->
+<footer class="footer" role="contentinfo">
+  <div class="container">
+    <div class="footer__content">
+      <p>&copy; 2025 Emerson Eduardo Rodas Lopez. Todos los derechos reservados.</p>
+      <div class="footer__social">
+        <a href="#" class="social-link" aria-label="GitHub">
+          <span class="social-icon">🐙</span>
+        </a>
+        <a href="#" class="social-link" aria-label="LinkedIn">
+          <span class="social-icon">💼</span>
+        </a>
+        <a href="#" class="social-link" aria-label="Twitter">
+          <span class="social-icon">🐦</span>
+        </a>
+        <a href="#" class="social-link" aria-label="Email">
+          <span class="social-icon">📧</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- JavaScript -->
+<script src="js/main.js" type="module"></script>
 </body>
-
 </html>
