--- a/index.html
+++ b/index.html
@@ -5,48 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Meta Tags SEO Básicos -->
-  <title>Juan Pérez - Desarrollador Frontend | Portfolio Profesional</title>
-  <meta name="description" content="Portfolio de Juan Pérez - Desarrollador Frontend especializado en HTML, CSS y JavaScript. Creo experiencias web excepcionales, accesibles y de alto rendimiento.">
-  <meta name="keywords" content="desarrollador frontend, portfolio, HTML, CSS, JavaScript, React, desarrollo web, accesibilidad web">
-  <meta name="author" content="Juan Pérez">
+  <title>Emerson Eduardo Rodas López - Desarrollador Frontend | Portfolio Profesional</title>
+  <meta name="description" content="Portfolio de Emerson Rodas - Desarrollador Frontend especializado en HTML, CSS y JavaScript. Creo experiencias web excepcionales, accesibles y de alto rendimiento.">
+  <meta name="keywords" content="desarrollador frontend, portfolio, HTML, CSS, JavaScript, React, desarrollo web, accesibilidad web, Emerson Rodas">
+  <meta name="author" content="Emerson Eduardo Rodas López">
   <meta name="robots" content="index, follow, max-snippet:150, max-image-preview:large">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://juanperez.dev">
+  <link rel="canonical" href="https://emersonrodas.dev">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://juanperez.dev/">
-  <meta property="og:title" content="Juan Pérez - Desarrollador Frontend | Portfolio Profesional">
-  <meta property="og:description" content="Portfolio de Juan Pérez - Desarrollador Frontend especializado en HTML, CSS y JavaScript.">
-  <meta property="og:image" content="https://juanperez.dev/img/og-image.jpg">
+  <meta property="og:url" content="https://emersonrodas.dev/">
+  <meta property="og:title" content="Emerson Eduardo Rodas López - Desarrollador Frontend | Portfolio Profesional">
+  <meta property="og:description" content="Portfolio de Emerson Rodas - Desarrollador Frontend especializado en HTML, CSS y JavaScript.">
+  <meta property="og:image" content="https://emersonrodas.dev/img/og-image.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:locale" content="es_ES">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://juanperez.dev/">
-  <meta property="twitter:title" content="Juan Pérez - Desarrollador Frontend | Portfolio Profesional">
-  <meta property="twitter:description" content="Portfolio de Juan Pérez - Desarrollador Frontend especializado en HTML, CSS y JavaScript.">
-  <meta property="twitter:image" content="https://juanperez.dev/img/twitter-image.jpg">
+  <meta property="twitter:url" content="https://emersonrodas.dev/">
+  <meta property="twitter:title" content="Emerson Eduardo Rodas López - Desarrollador Frontend | Portfolio Profesional">
+  <meta property="twitter:description" content="Portfolio de Emerson Rodas - Desarrollador Frontend especializado en HTML, CSS y JavaScript.">
+  <meta property="twitter:image" content="https://emersonrodas.dev/img/twitter-image.jpg">
 
   <!-- Schema.org structured data -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Juan Pérez",
+      "name": "Emerson Eduardo Rodas López",
       "jobTitle": "Desarrollador Frontend",
-      "url": "https://juanperez.dev",
+      "url": "https://emersonrodas.dev",
       "sameAs": [
-        "https://github.com/juanperez",
-        "https://linkedin.com/in/juanperez",
-        "https://twitter.com/juanperez"
+        "https://github.com/emersonrodas",
+        "https://linkedin.com/in/emersonrodas",
+        "https://twitter.com/emersonrodas"
       ],
       "knowsAbout": ["HTML5", "CSS3", "JavaScript", "React", "Accesibilidad Web", "SEO"],
       "description": "Desarrollador Frontend especializado en crear experiencias web excepcionales.",
-      "image": "https://juanperez.dev/img/profile.webp"
+      "image": "https://emersonrodas.dev/img/profile.webp"
     }
   </script>
 
@@ -84,8 +84,8 @@
 <header class="header" role="banner">
   <nav class="nav" role="navigation" aria-label="Navegación principal">
     <div class="nav__brand">
-      <a href="#inicio" class="nav__logo" aria-label="Juan Pérez - Inicio">
-        <strong>JP</strong>
+      <a href="#inicio" class="nav__logo" aria-label="Emerson Rodas - Inicio">
+        <strong>ER</strong>
       </a>
     </div>
 
@@ -126,11 +126,11 @@
     <div class="container">
       <div class="hero__content">
         <h1 id="hero-title" class="hero__title">
-          Hola, soy <span class="hero__name text-gradient">Juan Pérez</span>
+          Hola, soy <span class="hero__name text-gradient">Emerson Rodas</span>
         </h1>
         <p class="hero__description">
-          <strong>Desarrollador Frontend</strong> especializado en crear experiencias web
-          <strong>accesibles</strong>, <strong>rápidas</strong> y <strong>excepcionales</strong>
+          <strong>Desarrollador Frontend</strong> apasionado por crear experiencias web
+          <strong>innovadoras</strong>, <strong>accesibles</strong> y de <strong>alto rendimiento</strong>
         </p>
         <div class="hero__buttons">
           <a href="#proyectos" class="btn btn--primary">
@@ -146,7 +146,7 @@
       <div class="hero__image">
         <img
           src="img/profile.webp"
-          alt="Juan Pérez - Desarrollador Frontend sonriendo"
+          alt="Emerson Eduardo Rodas López - Desarrollador Frontend"
           width="400"
           height="400"
           loading="eager"
@@ -162,25 +162,34 @@
       <div class="about__content">
         <div class="about__text">
           <p>
-            Soy un <strong>desarrollador frontend apasionado</strong> con más de 3 años de experiencia
-            creando interfaces web modernas y accesibles. Mi enfoque combina las mejores prácticas
-            de desarrollo con un fuerte compromiso con la <strong>calidad y el rendimiento</strong>.
+            Soy <strong>Emerson Eduardo Rodas López</strong>, un <strong>desarrollador frontend</strong>
+            con una pasión por transformar ideas en experiencias digitales excepcionales.
+            Mi enfoque combina <strong>código limpio</strong>, <strong>mejores prácticas</strong>
+            y un compromiso con la <strong>calidad y el detalle</strong>.
           </p>
           <p>
-            Especializado en <strong>HTML5 semántico</strong>, <strong>CSS3 avanzado</strong> y
-            <strong>JavaScript moderno</strong>, me aseguro de que cada proyecto no solo se vea bien,
-            sino que también sea <strong>accesible para todos los usuarios</strong> y optimizado
-            para los motores de búsqueda.
+            Especializado en <strong>tecnologías web modernas</strong>, me aseguro de que cada
+            proyecto no solo cumpla con los estándares técnicos, sino que también
+            ofrezca una <strong>experiencia de usuario memorable</strong> y accesible para todos.
+          </p>
+          <p>
+            Cuando no estoy programando, me gusta explorar nuevas tecnologías,
+            contribuir a proyectos de código abierto y mantenerme actualizado
+            con las últimas tendencias en desarrollo web.
           </p>
         </div>
         <div class="about__stats">
           <div class="stat-card">
-            <span class="stat-number" data-count="50">0</span>
+            <span class="stat-number" data-count="15">0</span>
             <span class="stat-label">Proyectos Completados</span>
           </div>
           <div class="stat-card">
-            <span class="stat-number" data-count="3">0</span>
+            <span class="stat-number" data-count="2">0</span>
             <span class="stat-label">Años de Experiencia</span>
+          </div>
+          <div class="stat-card">
+            <span class="stat-number" data-count="10">0</span>
+            <span class="stat-label">Tecnologías Dominadas</span>
           </div>
         </div>
       </div>
@@ -270,11 +279,9 @@
           <span class="form__error-message" id="message-error" role="alert" aria-live="polite"></span>
         </div>
 
-        <button type="submit" class="btn btn--primary btn--submit">
+        <button type="submit" class="btn btn--primary">
           <span class="btn__text">Enviar Mensaje</span>
           <span class="btn__loading" aria-hidden="true">Enviando...</span>
-          <span class="btn__success" aria-hidden="true">¡Enviado!</span>
-          <span class="btn__error" aria-hidden="true">Error</span>
         </button>
       </form>
     </div>
@@ -285,18 +292,18 @@
 <footer class="footer" role="contentinfo">
   <div class="container">
     <div class="footer__content">
-      <p>&copy; 2024 <strong>Juan Pérez</strong>. Todos los derechos reservados.</p>
+      <p>&copy; 2025 <strong>Emerson Eduardo Rodas López</strong>. Todos los derechos reservados.</p>
 
       <div class="footer__social">
         <p class="sr-only">Redes sociales</p>
         <div class="social-links" role="list">
-          <a href="https://github.com/juanperez" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="GitHub (se abre en nueva ventana)">
+          <a href="https://github.com/EmersonRodas9029/" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="GitHub (se abre en nueva ventana)">
             <span class="social-icon" aria-hidden="true">🐙</span>
           </a>
-          <a href="https://linkedin.com/in/juanperez" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn (se abre en nueva ventana)">
+          <a href="https://linkedin.com/in/emersonrodas" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn (se abre en nueva ventana)">
             <span class="social-icon" aria-hidden="true">💼</span>
           </a>
-          <a href="https://twitter.com/juanperez" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="Twitter (se abre en nueva ventana)">
+          <a href="https://twitter.com/emersonrodas" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="Twitter (se abre en nueva ventana)">
             <span class="social-icon" aria-hidden="true">🐦</span>
           </a>
         </div>
