feat: complete personalization with correct social links
- Updated GitHub links to https://github.com/EmersonRodas9029
- Updated LinkedIn links to https://www.linkedin.com/in/emerson-rodas-9029
- Removed Twitter completely from HTML and structured data
- Updated project repository links with correct GitHub username
- Enhanced accessibility labels for social links
- Updated copyright year to 2025

--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@
   <meta property="og:image:height" content="630">
   <meta property="og:locale" content="es_ES">
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://emersonrodas.dev/">
-  <meta property="twitter:title" content="Emerson Eduardo Rodas López - Desarrollador Frontend | Portfolio Profesional">
-  <meta property="twitter:description" content="Portfolio de Emerson Rodas - Desarrollador Frontend especializado en HTML, CSS y JavaScript.">
-  <meta property="twitter:image" content="https://emersonrodas.dev/img/twitter-image.jpg">
-
   <!-- Schema.org structured data -->
   <script type="application/ld+json">
     {
@@ -40,9 +33,8 @@
       "jobTitle": "Desarrollador Frontend",
       "url": "https://emersonrodas.dev",
       "sameAs": [
-        "https://github.com/emersonrodas",
-        "https://linkedin.com/in/emersonrodas",
-        "https://twitter.com/emersonrodas"
+        "https://github.com/EmersonRodas9029",
+        "https://www.linkedin.com/in/emerson-rodas-9029"
       ],
       "knowsAbout": ["HTML5", "CSS3", "JavaScript", "React", "Accesibilidad Web", "SEO"],
       "description": "Desarrollador Frontend especializado en crear experiencias web excepcionales.",
@@ -297,14 +289,11 @@
       <div class="footer__social">
         <p class="sr-only">Redes sociales</p>
         <div class="social-links" role="list">
-          <a href="https://github.com/EmersonRodas9029/" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="GitHub (se abre en nueva ventana)">
+          <a href="https://github.com/EmersonRodas9029" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="GitHub de Emerson Rodas (se abre en nueva ventana)">
             <span class="social-icon" aria-hidden="true">🐙</span>
           </a>
-          <a href="https://linkedin.com/in/emersonrodas" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn (se abre en nueva ventana)">
+          <a href="https://www.linkedin.com/feed/" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn de Emerson Rodas (se abre en nueva ventana)">
             <span class="social-icon" aria-hidden="true">💼</span>
-          </a>
-          <a href="https://twitter.com/emersonrodas" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="Twitter (se abre en nueva ventana)">
-            <span class="social-icon" aria-hidden="true">🐦</span>
           </a>
         </div>
       </div>
