feat: complete CV download functionality and enhancements
- Added CV download button in hero section with outline style
- Added CV link in navigation with gradient background
- Created comprehensive CV download manager with error handling
- Added keyboard shortcut (Ctrl + D) for quick download
- Implemented animated stats counter in about section
- Enhanced responsive design for all components
- Added download tracking and user feedback messages

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
       <li class="nav__item" role="none">
         <a href="#contacto" class="nav__link" role="menuitem">Contacto</a>
       </li>
+      <li class="nav__item" role="none">
+        <a href="#" class="nav__link nav__link--cv" role="menuitem" id="cv-download-link">
+          <span class="nav__cv-icon">📄</span>
+          CV
+        </a>
+      </li>
     </ul>
 
     <button class="theme-toggle" aria-label="Cambiar a modo oscuro" title="Alternar tema claro/oscuro">
@@ -133,6 +139,11 @@
             Contactar
             <span class="sr-only">, navegar a la sección de contacto</span>
           </a>
+          <!-- Nuevo botón de CV -->
+          <button class="btn btn--outline" id="hero-cv-download">
+            <span class="btn__icon">📄</span>
+            Descargar CV
+          </button>
         </div>
       </div>
       <div class="hero__image">
