Reorganizing the project to start adding new features and sections

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           <a href="https://github.com/EmersonRodas9029" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="GitHub de Emerson Rodas (se abre en nueva ventana)">
             <span class="social-icon" aria-hidden="true">🐙</span>
           </a>
-          <a href="https://www.linkedin.com/feed/" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn de Emerson Rodas (se abre en nueva ventana)">
+          <a href="https://www.linkedin.com/in/emerson-rodas-9029" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn de Emerson Rodas (se abre en nueva ventana)">
             <span class="social-icon" aria-hidden="true">💼</span>
           </a>
         </div>
