add custom Font Awesome icons throughout portfolio
- Added centralized icons configuration
- Implemented Font Awesome CDN
- Updated skills with professional icons
- Enhanced navigation with section icons
- Improved social links with brand icons
- Added icons to CV download functionality
- Created responsive icon styles

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#2563eb">
   <meta name="msapplication-TileColor" content="#2563eb">
-
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <!-- Preload crítico -->
   <link rel="preload" href="css/base.css" as="style">
   <link rel="preload" href="css/layout.css" as="style">
