feat(skills): add Docker and new IDEs with categorized sections
- Add Docker to tools section with special styling
- Add new IDEs: IntelliJ IDEA, Visual Studio, VS Code, NetBeans
- Organize skills into 4 categories: Backend, Frontend, Database, Tools
- Add custom icons and colors for each technology
- Implement responsive grid layout (3 per row on desktop)
- Update project examples to include Docker project
- Improve accessibility with ARIA labels and roles

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#2563eb">
   <meta name="msapplication-TileColor" content="#2563eb">
+
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
   <!-- Preload crítico -->
   <link rel="preload" href="css/base.css" as="style">
   <link rel="preload" href="css/layout.css" as="style">
@@ -200,15 +202,15 @@
     </div>
   </section>
 
-  <!-- Sección Habilidades -->
+  <!-- Sección Habilidades - ACTUALIZADA CON NUEVAS SECCIONES -->
   <section id="habilidades" class="skills" aria-labelledby="skills-title">
     <div class="container">
       <h2 id="skills-title" class="section__title">Habilidades Técnicas</h2>
       <p class="section__description">
-        Tecnologías y herramientas que utilizo para crear productos digitales de calidad
+        Tecnologías y herramientas organizadas por categorías para una mejor visualización
       </p>
-      <div class="skills__grid" role="list" aria-label="Lista de habilidades técnicas">
-        <!-- Las habilidades se cargarán dinámicamente -->
+      <div class="skills__grid" role="region" aria-label="Habilidades técnicas organizadas por categorías">
+        <!-- Las habilidades se cargarán dinámicamente en secciones -->
       </div>
     </div>
   </section>
