feat(skills): implement auto-sorting by proficiency level with visual enhancements
- Add automatic skill sorting by level: Advanced > Intermediate > Basic
- Implement level badges with position indicators (🏆⭐🌱)
- Add section statistics with level breakdown bars
- Create staggered animations based on skill level
- Improve visual hierarchy with level-based styling
- Add responsive design for mobile devices
- Maintain alphabetical sorting within same level tiers

Backend: Java(A) > C#(A) > TypeScript(I) > Node.js(I) > Python(B)
Frontend: HTML5(A) > CSS3(A) > JavaScript(A) > TypeScript(I) > React(I) > Astro(I) > Vue.js(B)
Database: All Intermediate (MySQL, PostgreSQL, SQLite, Oracle, SQL Server)
Tools: VS Code(A) > Git(I) > GitHub(I) > IntelliJ(I) > VS(I) > NetBeans(I) > Figma(I) > Docker(B)

--- a/index.html
+++ b/index.html
@@ -202,15 +202,32 @@
     </div>
   </section>
 
-  <!-- Sección Habilidades - ACTUALIZADA CON NUEVAS SECCIONES -->
+  <!-- Sección Habilidades - ACTUALIZADA CON NIVELES Y CATEGORÍAS -->
   <section id="habilidades" class="skills" aria-labelledby="skills-title">
     <div class="container">
       <h2 id="skills-title" class="section__title">Habilidades Técnicas</h2>
       <p class="section__description">
-        Tecnologías y herramientas organizadas por categorías para una mejor visualización
+        Tecnologías y herramientas organizadas por categorías con indicadores de nivel de dominio
       </p>
       <div class="skills__grid" role="region" aria-label="Habilidades técnicas organizadas por categorías">
-        <!-- Las habilidades se cargarán dinámicamente en secciones -->
+        <!-- Las habilidades se cargarán dinámicamente en secciones con niveles -->
+      </div>
+      <div class="skills-legend" style="margin-top: var(--spacing-xl); padding: var(--spacing-md); background: var(--bg-secondary); border-radius: var(--border-radius);">
+        <h3 style="font-size: var(--font-size-lg); margin-bottom: var(--spacing-sm); color: var(--text-primary);">Leyenda de Niveles:</h3>
+        <div style="display: flex; gap: var(--spacing-lg); flex-wrap: wrap;">
+          <div style="display: flex; align-items: center; gap: var(--spacing-sm);">
+            <span style="display: inline-block; width: 12px; height: 12px; background: #10b981; border-radius: 50%;"></span>
+            <span style="color: var(--text-primary);">Avanzado - Experiencia extensa y dominio completo</span>
+          </div>
+          <div style="display: flex; align-items: center; gap: var(--spacing-sm);">
+            <span style="display: inline-block; width: 12px; height: 12px; background: #f59e0b; border-radius: 50%;"></span>
+            <span style="color: var(--text-primary);">Intermedio - Conocimiento sólido y experiencia práctica</span>
+          </div>
+          <div style="display: flex; align-items: center; gap: var(--spacing-sm);">
+            <span style="display: inline-block; width: 12px; height: 12px; background: #3b82f6; border-radius: 50%;"></span>
+            <span style="color: var(--text-primary);">Básico - Conocimiento fundamental y experiencia inicial</span>
+          </div>
+        </div>
       </div>
     </div>
   </section>
