feat: implement functional contact form with EmailJS integration
- Added EmailJS configuration with correct credentials:
  - Public Key: aM5Wb0eTPpfVuJkmx
  - Service ID: service_51gssgi
  - Template ID: template_cay9twa
- Complete contact form implementation with real email sending
- Form validation with user-friendly error messages
- Loading states and success/error feedback
- Email template includes form data, date, and user agent
- Added comprehensive debugging and testing files
- Improved form UX with animated transitions and status indicators

Features:
- Real email sending to Gmail via EmailJS
- Form validation (name, email, message)
- Loading spinner during submission
- Success/error notifications
- Form reset after successful submission
- Mobile responsive design
- Accessible form controls
- Console logging for debugging

This completes the contact functionality, allowing visitors to send messages directly to the portfolio owner's email

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
         </div>
 
         <button type="submit" class="btn btn--primary">
+          <i class="fas fa-paper-plane btn__icon"></i>
           <span class="btn__text">Enviar Mensaje</span>
-          <span class="btn__loading" aria-hidden="true">Enviando...</span>
         </button>
       </form>
     </div>
@@ -321,10 +321,10 @@
         <p class="sr-only">Redes sociales</p>
         <div class="social-links" role="list">
           <a href="https://github.com/EmersonRodas9029" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="GitHub de Emerson Rodas (se abre en nueva ventana)">
-            <span class="social-icon" aria-hidden="true">🐙</span>
+            <i class="fab fa-github social-icon"></i>
           </a>
           <a href="https://www.linkedin.com/in/emerson-rodas-9029" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn de Emerson Rodas (se abre en nueva ventana)">
-            <span class="social-icon" aria-hidden="true">💼</span>
+            <i class="fab fa-linkedin social-icon"></i>
           </a>
         </div>
       </div>
@@ -333,6 +333,7 @@
 </footer>
 
 <!-- JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script src="js/main.js" type="module"></script>
 </body>
 </html>
